<resources>
    <string name="app_name">Bright Morning!</string>
    <string name="tab_text_1">Alarms</string>
    <string name="tab_text_2">Hue control</string>
    <string name="app_title">BRIGHT MORNING!</string>
    <string name="tab_text_3">Settings</string>
    <string name="add">Add</string>
    <string name="mon">Mon</string>
    <string name="tue">Tue</string>
    <string name="wed">Wed</string>
    <string name="thu">Thu</string>
    <string name="fri">Fri</string>
    <string name="sat">Sat</string>
    <string name="sun">Sun</string>
    <string name="placeholder">Placeholder</string>
    <string name="select">select</string>
    <string name="confirm">confirm</string>
    <string name="cancel">cancel</string>
    <string name="light_name">Light name</string>
</resources>