<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/CardView_Card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="8dp"
        app:cardCornerRadius="8dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Switch
                android:id="@+id/Switch_CardSwitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="14dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/DigitalClock_AlarmClock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Monday"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginStart="6dp"
                android:text="@string/mon"
                android:textSize="6sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/DigitalClock_AlarmClock" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Tuesday"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/tue"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@id/Button_Monday"
                app:layout_constraintTop_toBottomOf="@+id/DigitalClock_AlarmClock" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Wednesday"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/wed"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@id/Button_Tuesday"
                app:layout_constraintTop_toBottomOf="@+id/DigitalClock_AlarmClock" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Thursday"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/thu"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@id/Button_Wednesday"
                app:layout_constraintTop_toBottomOf="@+id/DigitalClock_AlarmClock" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Friday"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/fri"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@id/Button_Thursday"
                app:layout_constraintTop_toBottomOf="@+id/DigitalClock_AlarmClock" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Saturday"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:text="@string/sat"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@id/Button_Friday"
                app:layout_constraintTop_toBottomOf="@+id/DigitalClock_AlarmClock" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/Button_Sunday"
                android:layout_width="48dp"
                android:layout_height="40dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:text="@string/sun"
                android:textSize="6sp"
                app:layout_constraintStart_toEndOf="@id/Button_Saturday"
                app:layout_constraintTop_toBottomOf="@+id/DigitalClock_AlarmClock" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>